# hexcells_solver

./: .gitignore  .gitmodules  Cargo.toml  README.md  reddit_posts.json  sniff-reddit.py
extra/: LICENSE  the_trial.txt
src/: constraint.rs  defn.rs  env.rs  main.rs  misc.rs  multiverse.rs  reddit_post.rs  reporting.rs  solver.rs
