[package]
name = "hexcells-solver"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
regex = "1.9.1"
itertools = "0.11.0"
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
crypto-hash = "0.3.4"
# num-rational = "0.4.1"
